# lswtcs-vita

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
extras/: cpuinfo  meminfo
extras/livearea/: template.xml
lib/fios/: fios.c  fios.h
lib/kubridge/: kubridge.h
lib/libc_bridge/: CMakeLists.txt  libc_bridge.h  nids.yml
lib/sha1/: sha1.h
lib/so_util/: so_util.c  so_util.h
lib/xxhash/: xxhash.c
shaders/: .gitignore  compile_all.sh
shaders/cg/: 0300EE11BB9C1B6605617916AF1E120B22D95214.cg  063799982401907E0F428D7DBBD7B12E717B55D1.cg  0663A4DCBE160972C75B3B72FBB50ECF61E7DAA7.cg  0B8184542B4B4252A24D9318CB1F8EBFC0999AEA.cg  0CFE78A8D754E3DD9604E374B45A1EB32B4630C7.cg  0E8E86DFB7FDB8D174C66D07915DEC90441D638C.cg  0EE2446CE644F062AC1A8829662E656F5FFA5D80.cg  0F5FFD0940B03E0F4D3AD9DA1A839133C8968AD9.cg  1054FE8E6C5E614C7601B0728979C97C428C60AB.cg  115F919F1837B22A2A6C1FBEBE1AE4F8957AF4A8.cg  119974C39B7952077F4F7E338E30361081E5CC68.cg  133ECD66F82628F7BC07704F3F2BCDF850CFB4F3.cg  13704D6F918674471CBC3CDC8A37B61474AFF034.cg  13B8BA75F7820607542155E862895EC29E672319.cg  145CFB8ED0D019C2CCE8784CA8884C920902AEA1.cg  167456D7357D75F1F482F12CDDFE796D19306041.cg  16A5EDF813C5E1531A44E22CB1EAD384884D1DD3.cg  1717ECAC68BA9CD8ED57FFEFA655F3E777F77C53.cg  19C27FD4A9CC99BB7089D76BE9D687210D73D302.cg  1C2E92E1ABD2B87D23AA562BF3D4A7F9BF6E13F8.cg  1C7E82C0EC639D5CAAB1FC37DD8DD6E8DBECE2CF.cg  1DE271EBE830BF5AEBDE8FC15942C4C64F426F81.cg  20CF20FF21A9EAB239589C647D319F6C14CAD620.cg  22727884BCFDBA3ED8023F647E563A4F7859DA91.cg  2360005D3D79D521B3525324746BC6CCF749F198.cg  2377DFF53930F6F876E0190DD84EFC4C30742086.cg  2545C33B1D1C59EB376E886D55A48DB6A5D60D0C.cg  26425D2D1093639A82C492808F2CE684CFFCC78E.cg  26EC6DF8502995106DA032E6C05C9FC27775270B.cg  26ECFC4295F98E4767B395C5C3B4178F54FCCB03.cg  270CB171D63891904A0FB5D33A7AD3F756FBC8D4.cg  291C5E306BA8108E99F465FB693982F01B0821B7.cg  2AE14B511971FE6856B5797C564150FEA774F2CF.cg  2B40196EB89BE3D0F90ADCBE22DB457E766EA0C8.cg  2C3170E5985CD46A6FE8AE371AA3A37F37DAE590.cg  2E168BF114AAE6FF50FD5700EBEED0FA745E2A99.cg  2FA676114A303E66C5323F1FD84BBC8F3EA596FE.cg  304CBBD561E9C6F66EB13EB2E04444A06F943936.cg  30587109EBE00E87E8415A64FC0DCD24FE490924.cg  31A3C581F293769A6CF640ACAED1D5FF5435B99B.cg  (+145 more)
shaders/cg/0/: 00D11DE308D480B0.cg  014C03272E738200.cg  01D3AC5C649E9234.cg  031DA06246E65CC0.cg  03E34B730F1E386F.cg  05084E8C035F4BDA.cg  05CA4A68ACBE00FD.cg  0695545975CA50EA.cg  0AF03E91367A5977.cg  0C4D9696E1D0761F.cg  0C94385E43CC78C5.cg  0E4558780FBBBCF0.cg  0E8F07796AF26C0E.cg
shaders/cg/1/: 139657F4CC76597D.cg  155C88A447AB9A67.cg  166C413408FA2B40.cg  1729A9113C53B09D.cg  1944A556615E7813.cg  19E8298F3D0515F3.cg  1ACF3161AABE9211.cg  1B1D3A8003FCD9FC.cg  1BC54BF28658BD4F.cg  1D52A0583A95C769.cg  1F8D6CB92511FBED.cg
shaders/cg/2/: 21B5803EBE8F86EC.cg  21C717930257E6E6.cg  2384E46F6F1F9F11.cg  23FC170070CAB35F.cg  245C88C5E2547B3A.cg  24A663BA6A78BEC2.cg  25B4E16654473D00.cg  27FC2FADB0E05895.cg  28550C5843A6708A.cg  286DA3F86B3BFCF8.cg  293A11C2FAAB97A3.cg  294D04D1B16980A4.cg  2A57996400A7BF41.cg  2A696292C5E20175.cg  2B33A7A83481F6E6.cg  2DA5ACD090DD6FD6.cg  2E4323506EF77FBF.cg  2E43D7FBB07BFC44.cg
shaders/cg/3/: 31E85311CD6650D3.cg  325EA366BFAE8FFB.cg  332E174D6605A00A.cg  34488AA2AAA80325.cg  35DCDBE6E943F307.cg  36C920E3EE465A91.cg  3A07156430852915.cg  3A663963EC585F65.cg  3AE6AA6BE927A222.cg  3AE9355A289306B2.cg  3B3F6940622F01C9.cg  3CAED7E92F462BBC.cg
shaders/cg/4/: 425E87DC3417F7F7.cg  427C387AC1A184DE.cg  434B584AACE935D1.cg  440E5DD7D0AC7DB7.cg  48925FF514136B8C.cg  48F194FCA20C9D8B.cg  4A182A78B0E00BFC.cg  4AEE0D056316E622.cg  4DAD077506136135.cg  4E0BE07F28D822E0.cg
shaders/glsl/: 00D81416E086D4193991CB100ABC4F2961D5AD90.glsl  0300EE11BB9C1B6605617916AF1E120B22D95214.glsl  04083AD3E5ABE45260E33DC9DCE54D5B348836A4.glsl  050979D43EDEADBE534B1ED5F427089FAC3C3607.glsl  0663A4DCBE160972C75B3B72FBB50ECF61E7DAA7.glsl  09BA40F810B12C4DE68AD6D0FB6324801D43D2B6.glsl  0B8184542B4B4252A24D9318CB1F8EBFC0999AEA.glsl  0CB2AD3F4EC5821E6CE13852819BF0549E484BA8.glsl  0DDAF453F773F0A40D2786ADC4B9DE44E04F7DFC.glsl  0F5FFD0940B03E0F4D3AD9DA1A839133C8968AD9.glsl  107DB8317544580312F6F9F06D7FA6B0A48F0296.glsl  115F919F1837B22A2A6C1FBEBE1AE4F8957AF4A8.glsl  13605CA1F5066E36F7CC9AC5263E369855080BD7.glsl  167456D7357D75F1F482F12CDDFE796D19306041.glsl  1717ECAC68BA9CD8ED57FFEFA655F3E777F77C53.glsl  19C27FD4A9CC99BB7089D76BE9D687210D73D302.glsl  1C2E92E1ABD2B87D23AA562BF3D4A7F9BF6E13F8.glsl  1C7E82C0EC639D5CAAB1FC37DD8DD6E8DBECE2CF.glsl  1DE271EBE830BF5AEBDE8FC15942C4C64F426F81.glsl  1E15BE57AD9F67B34CD05EB66BA70BF5C63D1986.glsl  20CF20FF21A9EAB239589C647D319F6C14CAD620.glsl  21DE3A2DD0C53E701FD95D77F4E8C3465D715A68.glsl  22727884BCFDBA3ED8023F647E563A4F7859DA91.glsl  2377DFF53930F6F876E0190DD84EFC4C30742086.glsl  25332A174129277C85EF309AE895F2932C6D7444.glsl  2545C33B1D1C59EB376E886D55A48DB6A5D60D0C.glsl  26239FFAEAFA94723D7660D04793270C08B722BA.glsl  26AE60AE7B01D46709636E5A294C931CAF99F930.glsl  26EC6DF8502995106DA032E6C05C9FC27775270B.glsl  26ECFC4295F98E4767B395C5C3B4178F54FCCB03.glsl  270CB171D63891904A0FB5D33A7AD3F756FBC8D4.glsl  27EAAAD479A35249EED0A3EF92ECEC8366A52899.glsl  291C5E306BA8108E99F465FB693982F01B0821B7.glsl  292A696087BFC5C10EF9348B06F108D9960E98E9.glsl  297B0889E2F9F10CC7C10696CA3AB5EFF2A9D6E8.glsl  2C3170E5985CD46A6FE8AE371AA3A37F37DAE590.glsl  2D0D20C0C920C1FA769EB10EF5081C9F51ADF2A6.glsl  2E168BF114AAE6FF50FD5700EBEED0FA745E2A99.glsl  304CBBD561E9C6F66EB13EB2E04444A06F943936.glsl  30587109EBE00E87E8415A64FC0DCD24FE490924.glsl  (+146 more)
source/: config.h  dynlib.c  java.c  main.c  patch.c
source/reimpl/: asset_manager.cpp  asset_manager.h  egl.c  egl.h  errno.c  errno.h  gl.c  gl.h  io.c  io.h  keycodes.h  log.c  log.h  mem.c  mem.h  native_window.cpp  native_window.h  pthr.c  pthr.h  sys.c  sys.h  time64.c  time64.h  time64_config.h
source/utils/: dialog.c  dialog.h  gamepad.h  glutil.c  glutil.h  init.c  init.h  logger.c  logger.h  settings.c  settings.h  tt_activity.c  tt_activity.h  utils.c  utils.h
(+375 files in other folders)
